DS-4452 Fixed Demand Queue Submit Job Button Off Screen

--- a/src/app/components/header/processing-queue/processing-queue.component.scss
+++ b/src/app/components/header/processing-queue/processing-queue.component.scss
@@ -329,7 +329,7 @@ $bottom-offset: 10px;
   }
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   height: 100%;
   border-top-style: solid;
   border-top-width: 1px;
@@ -342,7 +342,11 @@ $bottom-offset: 10px;
 
 .footer-submit {
   flex: none;
-  margin: 12px 16px 12px 0;
+  margin: 12px 10px 12px 0;
+}
+
+.footer-submit-mobile {
+  margin-top: 19px;
 }
 
 .footer-job-notification {
@@ -351,6 +355,7 @@ $bottom-offset: 10px;
   }
   flex: none;
   margin-right: 20px;
+  margin-left: 10px;
   align-self: center;
   font-size: 14px;
 }
@@ -358,6 +363,10 @@ $bottom-offset: 10px;
 .footer-submit-button {
   display: inline-flex;
   align-self: center;
+}
+
+.footer-mini-text {
+  font-size: 12px;
 }
 
 .mwlResizable {
